--- a/index.html
+++ b/index.html
@@ -17,7 +17,25 @@
           <a href="#!" class="nav__logo logo">Panto</a>
           <ul class="nav-list">
             <li class="nav-list__item">
-              <a href="#!" class="nav-list__link">Furniture</a>
+              <a href="#!" class="nav-list__link nav-list__link--dropdown"
+                >Furniture</a
+              >
+              <div class="nav-list__sub-nav">
+                <ul class="sub-nav">
+                  <li class="sub-nav__item">
+                    <a href="#!" class="sub-nav__link">Home</a>
+                  </li>
+                  <li class="sub-nav__item">
+                    <a href="#!" class="sub-nav__link">Services</a>
+                  </li>
+                  <li class="sub-nav__item">
+                    <a href="#!" class="sub-nav__link">Products</a>
+                  </li>
+                  <li class="sub-nav__item">
+                    <a href="#!" class="sub-nav__link">Contacts</a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="nav-list__item">
               <a href="#!" class="nav-list__link">Shop</a>
@@ -36,7 +54,7 @@
             </a>
           </div>
         </nav>
-        <div class="header__content">
+        <div class="header__content none">
           <h1 class="header__title">
             Make Your Interior More Minimalistic & Modern
           </h1>
@@ -218,7 +236,7 @@
         </div>
       </div>
     </header>
-    <section class="benefits">
+    <section class="benefits none">
       <div class="container">
         <div class="benefits__grid">
           <h2 class="benefits__title">Why Choosing Us</h2>
@@ -251,14 +269,13 @@
         </div>
       </div>
     </section>
-    <section class="products">
+    <section class="products none">
       <div class="container">
         <h2 class="products__title">Best Selling products</h2>
 
         <div class="products__tabs">
           <menu class="tab-controls">
-            <button data-tab="chair" class="tab-controls__btn">
-              Chair</button
+            <button data-tab="chair" class="tab-controls__btn">Chair</button
             ><button data-tab="bed" class="tab-controls__btn">Beds</button
             ><button data-tab="sofa" class="tab-controls__btn">Sofa</button
             ><button data-tab="lamp" class="tab-controls__btn">Lamp</button>
@@ -269,7 +286,10 @@
           <div class="slider">
             <div class="swiper">
               <div class="swiper-wrapper">
-                <article data-tab-value="chair" class="product-card swiper-slide">
+                <article
+                  data-tab-value="chair"
+                  class="product-card swiper-slide"
+                >
                   <a href="#product-page" class="product-card__link"></a>
                   <div class="product-card__photo">
                     <img
@@ -299,7 +319,10 @@
                     </div>
                   </div>
                 </article>
-                <article data-tab-value="chair" class="product-card swiper-slide">
+                <article
+                  data-tab-value="chair"
+                  class="product-card swiper-slide"
+                >
                   <a href="#product-page" class="product-card__link"></a>
                   <div class="product-card__photo">
                     <img
@@ -329,7 +352,10 @@
                     </div>
                   </div>
                 </article>
-                <article data-tab-value="chair" class="product-card swiper-slide">
+                <article
+                  data-tab-value="chair"
+                  class="product-card swiper-slide"
+                >
                   <a href="#product-page" class="product-card__link"></a>
                   <div class="product-card__photo">
                     <img
@@ -359,7 +385,10 @@
                     </div>
                   </div>
                 </article>
-                <article data-tab-value="chair" class="product-card swiper-slide">
+                <article
+                  data-tab-value="chair"
+                  class="product-card swiper-slide"
+                >
                   <a href="#product-page" class="product-card__link"></a>
                   <div class="product-card__photo">
                     <img
@@ -389,7 +418,10 @@
                     </div>
                   </div>
                 </article>
-                <article data-tab-value="chair" class="product-card swiper-slide">
+                <article
+                  data-tab-value="chair"
+                  class="product-card swiper-slide"
+                >
                   <a href="#product-page" class="product-card__link"></a>
                   <div class="product-card__photo">
                     <img
@@ -419,7 +451,10 @@
                     </div>
                   </div>
                 </article>
-                <article data-tab-value="chair" class="product-card swiper-slide">
+                <article
+                  data-tab-value="chair"
+                  class="product-card swiper-slide"
+                >
                   <a href="#product-page" class="product-card__link"></a>
                   <div class="product-card__photo">
                     <img
@@ -449,7 +484,10 @@
                     </div>
                   </div>
                 </article>
-                <article data-tab-value="chair" class="product-card swiper-slide">
+                <article
+                  data-tab-value="chair"
+                  class="product-card swiper-slide"
+                >
                   <a href="#product-page" class="product-card__link"></a>
                   <div class="product-card__photo">
                     <img
@@ -479,7 +517,10 @@
                     </div>
                   </div>
                 </article>
-                <article data-tab-value="chair" class="product-card swiper-slide">
+                <article
+                  data-tab-value="chair"
+                  class="product-card swiper-slide"
+                >
                   <a href="#product-page" class="product-card__link"></a>
                   <div class="product-card__photo">
                     <img
@@ -540,7 +581,10 @@
                     </div>
                   </div>
                 </article>
-                <article data-tab-value="sofa" class="product-card swiper-slide">
+                <article
+                  data-tab-value="sofa"
+                  class="product-card swiper-slide"
+                >
                   <a href="#product-page" class="product-card__link"></a>
                   <div class="product-card__photo">
                     <img
@@ -570,7 +614,10 @@
                     </div>
                   </div>
                 </article>
-                <article data-tab-value="lamp" class="product-card swiper-slide">
+                <article
+                  data-tab-value="lamp"
+                  class="product-card swiper-slide"
+                >
                   <a href="#product-page" class="product-card__link"></a>
                   <div class="product-card__photo">
                     <img
@@ -630,7 +677,10 @@
                     </div>
                   </div>
                 </article>
-                <article data-tab-value="lamp" class="product-card swiper-slide">
+                <article
+                  data-tab-value="lamp"
+                  class="product-card swiper-slide"
+                >
                   <a href="#product-page" class="product-card__link"></a>
                   <div class="product-card__photo">
                     <img
@@ -690,7 +740,10 @@
                     </div>
                   </div>
                 </article>
-                <article data-tab-value="sofa" class="product-card swiper-slide">
+                <article
+                  data-tab-value="sofa"
+                  class="product-card swiper-slide"
+                >
                   <a href="#product-page" class="product-card__link"></a>
                   <div class="product-card__photo">
                     <img
@@ -736,7 +789,7 @@
         </div>
       </div>
     </section>
-    <footer class="footer">
+    <footer class="footer none">
       <div class="container container--small">
         <div class="footer-grid">
           <div class="footer__desc">
