Add mobile navigation html and scss

--- a/index.html
+++ b/index.html
@@ -47,12 +47,15 @@
               <a href="#!" class="nav-list__link">Contact</a>
             </li>
           </ul>
-          <div class="cart">
-            <a href="#!"
-              ><img src="./icons/bag.svg" alt="Cart icon" class="cart-image" />
-              <div class="cart__count">0</div>
-            </a>
-          </div>
+
+          <a href="#!" class="cart"
+            ><img src="./icons/bag.svg" alt="Cart icon" class="cart-image" />
+            <div class="cart__count">0</div>
+          </a>
+
+          <button class="nav__button">
+            <img src="./icons/burger-menu.svg" alt="Open navigation" />
+          </button>
         </nav>
         <div class="header__content none">
           <h1 class="header__title">
@@ -234,6 +237,51 @@
             ></label>
           </div>
         </div>
+      </div>
+      <div class="mobile-nav-wrapper">
+        <div class="mobile-nav-header">
+          <a href="#cart" class="mobile-cart">
+            <div class="cart">
+              <img src="./icons/bag.svg" alt="Cart icon" class="cart-image" />
+              <div class="cart__count">0</div>
+            </div>
+            Cart
+          </a>
+
+          <button class="mobile-nav-btn-close">
+            <img src="./icons/burger-cross.svg" alt="Close navigation" />
+          </button>
+        </div>
+        <ul class="mobile-nav">
+          <li class="mobile-nav__item">
+            <a href="#!" class="mobile-nav__link mobile-nav__link--dropdown"
+              >Furniture</a
+            >
+            <ul class="mobile-sub-nav">
+              <li class="mobile-sub-nav__item">
+                <a href="#!" class="mobile-sub-nav__link">Home</a>
+              </li>
+              <li class="mobile-sub-nav__item">
+                <a href="#!" class="mobile-sub-nav__link">Services</a>
+              </li>
+              <li class="mobile-sub-nav__item">
+                <a href="#!" class="mobile-sub-nav__link">Products</a>
+              </li>
+              <li class="mobile-sub-nav__item">
+                <a href="#!" class="mobile-sub-nav__link">Contacts</a>
+              </li>
+            </ul>
+          </li>
+          <li class="mobile-nav__item">
+            <a href="#!" class="mobile-nav__link">Shop</a>
+          </li>
+          <li class="mobile-nav__item">
+            <a href="#!" class="mobile-nav__link">About Us</a>
+          </li>
+          <li class="mobile-nav__item">
+            <a href="#!" class="mobile-nav__link">Contact</a>
+          </li>
+        </ul>
       </div>
     </header>
     <section class="benefits none">
