--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <img src="./icons/burger-menu.svg" alt="Open navigation" />
           </button>
         </nav>
-        <div class="header__content ">
+        <div class="header__content">
           <h1 class="header__title">
             Make Your Interior More Minimalistic & Modern
           </h1>
@@ -65,24 +65,26 @@
             Turn your room with panto into a lot more minimalist and modern with
             ease and speed
           </p>
-          <form action="" class="search-form header__search">
-            <input
-              placeholder="Search furniture"
-              type="text"
-              class="search-form__input"
-              autocomplete="off"
-            />
-            <button type="submit" class="search-form__button">
-              <img src="./icons/search.svg" alt="Search" />
-            </button>
-          </form>
+          <div class="header__search">
+            <form action="" class="search-form">
+              <input
+                placeholder="Search furniture"
+                type="text"
+                class="search-form__input"
+                autocomplete="off"
+              />
+              <button type="submit" class="search-form__button">
+                <img src="./icons/search.svg" alt="Search" />
+              </button>
+            </form>
+          </div>
         </div>
-        <div class="header__dot-sofa">
+        <div class="header__dot header__dot--sofa">
           <button class="info-dot">
             <div class="info-dot__radius"></div>
             <div class="info-dot__circle"></div>
           </button>
-          <div class="info-hint ">
+          <div class="info-hint">
             <input
               type="radio"
               name="sofa-color"
@@ -117,12 +119,12 @@
             ></label>
           </div>
         </div>
-        <div class="header__dot-vase">
+        <div class="header__dot header__dot--vase">
           <button class="info-dot">
             <div class="info-dot__radius"></div>
             <div class="info-dot__circle"></div>
           </button>
-          <div class="info-hint ">
+          <div class="info-hint">
             <input
               type="radio"
               name="sofa-color"
@@ -157,12 +159,12 @@
             ></label>
           </div>
         </div>
-        <div class="header__dot-item">
+        <div class="header__dot header__dot--item">
           <button class="info-dot">
             <div class="info-dot__radius"></div>
             <div class="info-dot__circle"></div>
           </button>
-          <div class="info-hint ">
+          <div class="info-hint">
             <input
               type="radio"
               name="sofa-color"
@@ -197,12 +199,12 @@
             ></label>
           </div>
         </div>
-        <div class="header__dot-wall">
+        <div class="header__dot header__dot--wall">
           <button class="info-dot">
             <div class="info-dot__radius"></div>
             <div class="info-dot__circle"></div>
           </button>
-          <div class="info-hint ">
+          <div class="info-hint">
             <input
               type="radio"
               name="sofa-color"
@@ -238,9 +240,8 @@
           </div>
         </div>
       </div>
-
     </header>
-    <section class="benefits ">
+    <section class="benefits">
       <div class="container">
         <div class="benefits__grid">
           <h2 class="benefits__title">Why Choosing Us</h2>
@@ -273,7 +274,7 @@
         </div>
       </div>
     </section>
-    <section class="products ">
+    <section class="products">
       <div class="container">
         <h2 class="products__title">Best Selling products</h2>
 
@@ -793,7 +794,7 @@
         </div>
       </div>
     </section>
-    <footer class="footer ">
+    <footer class="footer">
       <div class="container container--small">
         <div class="footer-grid">
           <div class="footer__desc">
